feat(hyelyeon)1013:자바스크립트 level1

--- a/Javascript/level1/level1.html
+++ b/Javascript/level1/level1.html
@@ -20,8 +20,6 @@
       </p>
       <button>제출</button>
     </form>
-    <ul id="account-list">
-      <li>성용은행 : 12-********-34</li>
-    </ul>
+    <ul id="account-list"></ul>
   </body>
 </html>
