feat(hyelyeon)1015: 3주차 플로우 자바스크립트 문제풀이

--- a/Javascript/level2/level2.html
+++ b/Javascript/level2/level2.html
@@ -9,8 +9,10 @@
   </head>
   <body>
     <form>
-      <p>이름: <input name="user-name" /></p>
-      <p>연락처: <input name="user-phone" maxlength="13" /></p>
+      <p>이름: <input name="user-name" class="user-name" /></p>
+      <p>
+        연락처: <input name="user-phone" class="user-phone" maxlength="13" />
+      </p>
       <button>예약번호 확인</button>
     </form>
     <p id="reservation-number"></p>
